# lux-renovate-intelligence

./: .env.example  .gitignore  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: __init__.py  main.py
backend/app/api/: routes_documents.py  (+3 more)
backend/tests/: test_api_auth.py  test_config_defaults.py  test_context_evidence.py  test_cors.py  test_coverage_calculator.py  test_document_parser.py  test_document_source_route.py  test_dossier_route_retrieval.py  test_dossier_store_security.py  test_embedding_provider.py  test_evaluation_runner.py  test_evidence_metadata.py  test_evidence_validator.py  test_geospatial.py  test_llm_provider.py  test_ocr_provider.py  test_pipeline_packaging.py  test_planning_ingestion.py  test_public_repo_hygiene.py  test_readiness_rule_engine.py  test_rerank_provider.py  test_retriever.py  test_retry_policy.py  test_semantic_evaluation.py  test_semantic_reviewer.py  test_site_resolver.py  test_token_monitor.py
data/processed/: source_registry.json
data/sample/: demo_geospatial.geojson  demo_sites.json  geospatial_context.json  multilingual_query_terms.json  planning_sources.json  readiness_taxonomy.json
docs/: architecture.md  data_sources.md  evaluation.md  production_roadmap.md  tradeoffs.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
pipelines/: __init__.py  build_document_index.py  download_planning_documents.py  ingest_planning_documents.py  run_all.py
(+47 files in other folders)
