[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lux-renovate-intelligence"
version = "0.1.0"
description = "Evidence-backed renovation readiness assistant MVP."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["backend", "."]
include = ["app*", "pipelines*"]
