[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lux-renovate-intelligence"
version = "0.1.0"
description = "Evidence-backed renovation readiness assistant MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "pymupdf>=1.24.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "anyio>=4.0.0",
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["backend", "."]
include = ["app*", "pipelines*"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
  "frontend",
  "data",
  "manual-test-output",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
